# RealTimeOD

./: .gitignore  README.md  demo.py  pyproject.toml  yolov5.py
src/: main.py  yolov5.py
