[tool.poetry]
name = "Real time object detection"
version = "1.0.0"
description = "Real time object detection by using webcam"
authors = ["kazuki <kazumatsu.dev28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.6.0"
pafy = "^0.5.5"
youtube_dl = "^2021.12.17"
torch = "^1.12.1"
pandas = "^1.4.3"
requests = "^2.28.1"
PyYAML = "^6.0"
Pillow = "^9.2.0"
tqdm = "^4.64.0"
torchvision = "^0.13.1"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
